# pupil-server

./: .gitignore  .travis.env  .travis.yml  Cargo.toml  Makefile  rustfmt.toml
frontend/: elm-package.json  package-lock.json  package.json  webpack.config.js
frontend/src/elm/: Dash.elm  Index.elm  Login.elm  Student.elm  Threshold.elm  Tutor.elm
frontend/src/static/: dash.html  dash.js  index.html  index.js  login.js
frontend/src/static/styles/: main.scss
migrations/20170128225820_create_users/: up.sql
migrations/20170924214747_conf/: down.sql  up.sql
src/: database.rs  error.rs  fail.rs  main.rs  model.rs  models.rs  passwd.rs  route.rs  schema.rs  server.rs
src/error/: mod.rs  request.rs  server.rs
src/model/: conf.rs  mod.rs  register.rs  safe_user.rs  token.rs  user.rs
templates/: dash.html.hbs  index.html.hbs  threshold.html.hbs
