[package]
name = "pupil-server"
version = "0.1.0"
authors = ["cgm616 <cgm616@me.com>"]

[dependencies]
time = "0.1.36"
rocket = "0.2.0"
rocket_codegen = "0.2.0"
rocket_contrib = "0.2.0"
jsonwebtoken = "2.0.0-beta-1"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
diesel = "0.11.1"
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
rand = "0.3"
argon2rs = "0.2.5"
r2d2 = "0.7.1"
r2d2-diesel = "0.11.0"

[dev-dependencies]
rocket = { version = "0.2.6", features = ["testing"] }
