[package]
name = "pupil-server"
version = "0.1.0"
authors = ["cgm616 <cgm616@me.com>"]

[dependencies]
time = "0.1.36"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
jsonwebtoken = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = "0.11.1"
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
rand = "0.3"
argon2rs = "0.2.5"
r2d2 = "0.7.1"
r2d2-diesel = "0.11.0"
