[package]
name = "pupil-server"
version = "0.1.0"
authors = ["cgm616 <cgm616@me.com>"]

[dependencies]
chrono = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
jsonwebtoken = "4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0.0-rc1"
diesel = { version = "1.0.0-rc1", features = ["postgres","chrono"] }
diesel_migrations = "1.0.0-rc1"
dotenv = "0.10"
rand = "0.4"
argon2rs = "0.2.5"
psl = "0.0.3"
publicsuffix = "1.4"
lettre = "0.7"
crockford = "1.0"
failure = "0.1"
failure_derive = "0.1"

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }
